--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="box"></div>
     <div><h2>Try to Replicate</h2></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
 
+    <div class="box1"></div>
+    <div class="box1"></div>
+    <div class="box1"></div>
+    <div class="box1"></div>
+    
+    <div class="box21"></div>
     <div class="box2"></div>
-    <div class="box2"></div>
-    <div class="box2"></div>
-    <div class="box2"></div>
+    <div class="box21"></div>
+    <div class="box21"></div>
 
     <div class="box3"></div>
     <div class="box6"></div>
